Releasing 22.0.0. Upgrading release dependencies: NuGet:CK.Testing.Monitoring/6.0.0, NuGet:CK.Testing.CKSetup/18.0.0, NuGet:CK.Testing.Monitoring/6.0.0, NuGet:CK.CodeGen.Roslyn/6.0.0, NuGet:CK.Core/16.1.0, NuGet:CK.CodeGen/6.0.0, NuGet:CK.Reflection/9.0.2, NuGet:CK.Setup.Dependency/14.0.0, NuGet:CK.ActivityMonitor.SimpleSender/17.0.0.

--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -9,8 +9,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="5.0.1--0006-develop" />
-    <PackageReference Include="CK.Core" Version="16.0.1--0009-develop" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="6.0.0" />
+    <PackageReference Include="CK.Core" Version="16.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
