CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/6.0.2--0002-develop
NuGet:CK.Testing.CKSetup/18.0.2--0002-develop
NuGet:CK.Testing.Monitoring/6.0.2--0002-develop
NuGet:CK.CodeGen.Roslyn/6.0.2--0002-develop
NuGet:CK.Core/16.1.2--0001-develop
NuGet:CK.CodeGen/6.0.2--0002-develop
NuGet:CK.Reflection/9.0.3--0033-develop
NuGet:CK.Setup.Dependency/14.0.2--0002-develop
NuGet:CK.ActivityMonitor.SimpleSender/17.0.2--0003-develop.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -9,9 +9,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="6.0.1" />
-    <PackageReference Include="CK.Reflection" Version="9.0.2" />
-    <PackageReference Include="CK.Setup.Dependency" Version="14.0.1" />
+    <PackageReference Include="CK.CodeGen" Version="6.0.2--0002-develop" />
+    <PackageReference Include="CK.Reflection" Version="9.0.3--0033-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="14.0.2--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
