--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -9,8 +9,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="6.0.2--0007-develop" />
-    <PackageReference Include="CK.Core" Version="16.1.2--0005-develop" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="6.1.0" />
+    <PackageReference Include="CK.Core" Version="16.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
