--- a/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
+++ b/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Testing.StObjMap\CK.Testing.StObjMap.csproj" />
-    <PackageReference Include="CK.Testing.CKSetup" Version="18.1.0" />
+    <PackageReference Include="CK.Testing.CKSetup" Version="18.1.1--0001-develop" />
   </ItemGroup>
 </Project>
