--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CSemVer" Version="11.0.1" />
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="17.1.1--0025-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="18.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
   <PropertyGroup>
