--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CSemVer" Version="11.0.1" />
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="18.0.1--0030-develop" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
