--- a/CK.Poco.Json/CK.Poco.Json.csproj
+++ b/CK.Poco.Json/CK.Poco.Json.csproj
@@ -7,6 +7,9 @@ Offers Json serialization/deserialization support to IPoco.
     </Description>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04huefv-develop" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
   </ItemGroup>
 </Project>
