CI build: Upgrading dependencies:
NuGet:CK.Globalization/0.0.0--04jhz0v-develop
NuGet:CK.Testing.Monitoring/7.1.2--0043-develop
NuGet:CK.Testing.CKSetup/19.0.1--0050-develop
NuGet:CK.Testing.Monitoring/7.1.2--0043-develop
NuGet:CK.CodeGen.Roslyn/7.0.1--0047-develop
NuGet:CK.Core/17.0.2--0009-develop
NuGet:CK.CodeGen/7.0.1--0047-develop
NuGet:CK.Globalization/0.0.0--04jhz0v-develop
NuGet:CK.Reflection/9.0.3--0037-develop
NuGet:CK.Setup.Dependency/15.0.1--0040-develop
NuGet:CK.ActivityMonitor.SimpleSender/18.0.1--0056-develop.

--- a/CK.Poco.Json/CK.Poco.Json.csproj
+++ b/CK.Poco.Json/CK.Poco.Json.csproj
@@ -7,7 +7,7 @@ Offers Json serialization/deserialization support to IPoco.
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhy04-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhz0v-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
