--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -10,7 +10,7 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
     <PackageReference Include="CK.CodeGen" Version="7.0.1--0047-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhy04-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhz0v-develop" />
     <PackageReference Include="CK.Reflection" Version="9.0.3--0037-develop" />
     <PackageReference Include="CK.Setup.Dependency" Version="15.0.1--0040-develop" />
   </ItemGroup>
