Releasing 24.0.0. Upgrading release dependencies: NuGet:CK.Globalization/0.1.0, NuGet:CK.Testing.Monitoring/8.0.0, NuGet:CK.Testing.CKSetup/20.0.0, NuGet:CK.Testing.Monitoring/8.0.0, NuGet:CK.CodeGen.Roslyn/8.0.0, NuGet:CK.Core/18.0.0, NuGet:CK.CodeGen/8.0.0, NuGet:CK.Globalization/0.1.0, NuGet:CK.Reflection/9.0.2, NuGet:CK.Setup.Dependency/16.0.0, NuGet:CK.ActivityMonitor.SimpleSender/19.0.0.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -9,10 +9,10 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="7.0.1--0054-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04kok4n-develop" />
-    <PackageReference Include="CK.Reflection" Version="9.0.3--0038-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="15.0.1--0047-develop" />
+    <PackageReference Include="CK.CodeGen" Version="8.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.1.0" />
+    <PackageReference Include="CK.Reflection" Version="9.0.2" />
+    <PackageReference Include="CK.Setup.Dependency" Version="16.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
