--- a/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
+++ b/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../../CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj" />
