--- a/CK.Poco.Json/CK.Poco.Json.csproj
+++ b/CK.Poco.Json/CK.Poco.Json.csproj
@@ -7,7 +7,7 @@ Offers Json serialization/deserialization support to IPoco.
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.1.1" />
+    <PackageReference Include="CK.Globalization" Version="0.1.2--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
