--- a/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
+++ b/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Testing.StObjMap\CK.Testing.StObjMap.csproj" />
-    <PackageReference Include="CK.Testing.CKSetup" Version="20.0.1--0002-develop" />
+    <PackageReference Include="CK.Testing.CKSetup" Version="20.0.1" />
   </ItemGroup>
 </Project>
