--- a/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
+++ b/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="8.0.1" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="8.0.2--0001-develop" />
     <!-- This implements concrete ServiceCollection and DI engine itself. -->
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
