CI build: Upgrading dependencies:
NuGet:CK.Globalization/0.2.1--0003-develop
NuGet:CK.Testing.Monitoring/8.0.2--0003-develop
NuGet:CK.Testing.CKSetup/20.0.2--0003-develop
NuGet:CK.Testing.Monitoring/8.0.2--0003-develop
NuGet:CK.CodeGen.Roslyn/8.0.2--0003-develop
NuGet:CK.Core/18.0.1--0000-develop
NuGet:CK.CodeGen/8.0.2--0003-develop
NuGet:CK.Globalization/0.2.1--0003-develop
NuGet:CK.Reflection/9.0.3--0038-develop
NuGet:CK.Setup.Dependency/16.0.2--0003-develop
NuGet:CK.ActivityMonitor.SimpleSender/19.0.2--0003-develop.

--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Engine\CK.StObj.Engine.csproj" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="8.0.1" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="8.0.2--0003-develop" />
   </ItemGroup>
 </Project>
