Releasing 24.2.0. Upgrading release dependencies: NuGet:CK.Globalization/0.2.0, NuGet:CK.Testing.Monitoring/8.0.1, NuGet:CK.Testing.CKSetup/20.0.1, NuGet:CK.Testing.Monitoring/8.0.1, NuGet:CK.CodeGen.Roslyn/8.0.1, NuGet:CK.Core/18.0.0, NuGet:CK.CodeGen/8.0.1, NuGet:CK.Globalization/0.2.0, NuGet:CK.Reflection/9.0.2, NuGet:CK.Setup.Dependency/16.0.1, NuGet:CK.ActivityMonitor.SimpleSender/19.0.1.

--- a/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
+++ b/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Testing.StObjMap\CK.Testing.StObjMap.csproj" />
-    <PackageReference Include="CK.Testing.CKSetup" Version="20.0.2--0003-develop" />
+    <PackageReference Include="CK.Testing.CKSetup" Version="20.0.1" />
   </ItemGroup>
 </Project>
