CI build: Upgrading dependencies:
NuGet:CK.Globalization/0.2.1--0005-develop
NuGet:CK.Testing.Monitoring/8.0.2--0007-develop
NuGet:CK.Testing.CKSetup/20.0.2--0005-develop
NuGet:CK.Testing.Monitoring/8.0.2--0007-develop
NuGet:CK.CodeGen.Roslyn/8.0.2--0005-develop
NuGet:CK.Core/18.0.1--0001-develop
NuGet:CK.CodeGen/8.0.2--0005-develop
NuGet:CK.Globalization/0.2.1--0005-develop
NuGet:CK.Reflection/9.0.3--0038-develop
NuGet:CK.Setup.Dependency/16.0.2--0005-develop
NuGet:CK.ActivityMonitor.SimpleSender/19.0.2--0005-develop.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -9,10 +9,10 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="8.0.1" />
-    <PackageReference Include="CK.Globalization" Version="0.2.0" />
-    <PackageReference Include="CK.Reflection" Version="9.0.2" />
-    <PackageReference Include="CK.Setup.Dependency" Version="16.0.1" />
+    <PackageReference Include="CK.CodeGen" Version="8.0.2--0005-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.2.1--0005-develop" />
+    <PackageReference Include="CK.Reflection" Version="9.0.3--0038-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="16.0.2--0005-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
