CI build: Upgrading dependencies:
NuGet:CK.Globalization/0.3.1--0001-develop
NuGet:CK.Testing.Monitoring/8.1.1--0005-develop
NuGet:CK.Testing.CKSetup/20.1.1--0001-develop
NuGet:CK.Testing.Monitoring/8.1.1--0005-develop
NuGet:CK.CodeGen.Roslyn/8.0.2--0009-develop
NuGet:CK.Core/18.0.1--0002-develop
NuGet:CK.CodeGen/8.0.2--0009-develop
NuGet:CK.Globalization/0.3.1--0001-develop
NuGet:CK.Reflection/9.0.3--0038-develop
NuGet:CK.Setup.Dependency/16.0.2--0009-develop
NuGet:CK.ActivityMonitor.SimpleSender/19.0.2--0009-develop.

--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -9,8 +9,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="8.0.1" />
-    <PackageReference Include="CK.Core" Version="18.0.0" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="8.0.2--0009-develop" />
+    <PackageReference Include="CK.Core" Version="18.0.1--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
