--- a/CK.Poco.Exc.Json.Engine/CK.Poco.Exc.Json.Engine.csproj
+++ b/CK.Poco.Exc.Json.Engine/CK.Poco.Exc.Json.Engine.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>CK.Setup.PocoJson</RootNamespace>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Poco.Exchange.Engine\CK.Poco.Exchange.Engine.csproj" />
