CI build: Upgrading dependencies:
NuGet:CK.Globalization/0.5.1--0003-develop
NuGet:CK.Testing.Monitoring/9.0.1--0002-develop
NuGet:CK.Testing.CKSetup/21.0.1--0002-develop
NuGet:CK.Testing.Monitoring/9.0.1--0002-develop
NuGet:CK.CodeGen.Roslyn/9.0.1--0002-develop
NuGet:CK.Core/19.0.1--0001-develop
NuGet:CK.CodeGen/9.0.1--0002-develop
NuGet:CK.Globalization/0.5.1--0003-develop
NuGet:CK.Reflection/9.0.3--0040-develop
NuGet:CK.Setup.Dependency/17.0.1--0002-develop
NuGet:CK.ActivityMonitor.SimpleSender/20.0.1--0002-develop.

--- a/CK.Poco.Exchange/CK.Poco.Exchange.csproj
+++ b/CK.Poco.Exchange/CK.Poco.Exchange.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -7,12 +6,10 @@
       Defines the IPocoSerializer/IPocoDeserializer, IPocoImporter/IPocoExpporter interfaces and PocoExchangeRegistry auto service.
     </Description>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.5.0" />
+    <PackageReference Include="CK.Globalization" Version="0.5.1--0003-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
   </ItemGroup>
-
 </Project>
