Removed ProcessService & IsMarshallable concept.
This was ultimately bound to command handling implementation and
this should not be a concern when distributing commands execution: it
is up to each party to handle the commands the way they want and can.

--- a/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
+++ b/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
@@ -15,5 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Poco.Exc.Json.Engine\CK.Poco.Exc.Json.Engine.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="%24StObjGen\" />
+  </ItemGroup>
 
 </Project>
