--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,14 @@
 version: build{build}
 image: Visual Studio 2022
 clone_folder: C:\CKli-World\CK-Database-Projects\CK-StObj
-services: mssql2017
+services:
+  - mssql2017
 environment:
   SqlServer/MasterConnectionString: Server=(local)\SQL2017;Database=master;User ID=sa;Password=Password12!
   CODECAKEBUILDER_SECRET_KEY:
     secure: 8VAzdXgUQaJyFoU3WLf2iPFV/8zPDm9qV4TfOpx8/rg=
 test: false
 on_finish:
-- ps: "'Get-ChildItem -Recurse *.log -exclude LastRun.log | % { Push-AppveyorArtifact $_.FullName }'"
+- ps: Get-ChildItem -Recurse *.log -exclude LastRun.log | % { Push-AppveyorArtifact $_.FullName }
 build_script:
 - dotnet run --project CodeCakeBuilder -nointeraction
