First CK.Engine component family: the configuration.
Changed "CK.StObj.AutoAssembly" to "CK.GeneratedAssembly".

--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -24,4 +24,7 @@
       <PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CK.Engine.Configuration\CK.Engine.Configuration.csproj" />
+  </ItemGroup>
 </Project>
