--- a/CK.Engine/CK.Engine.csproj
+++ b/CK.Engine/CK.Engine.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="20.0.1--0011-develop" />
+    <ProjectReference Include="..\CK.Engine.TypeCollector\CK.Engine.TypeCollector.csproj" />
   </ItemGroup>
 
+  <!-- Hopefully temporary... -->
   <ItemGroup>
-    <ProjectReference Include="..\CK.Abstractions\CK.Abstractions.csproj" />
+    <ProjectReference Include="..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
   </ItemGroup>
 
 </Project>
