--- a/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
+++ b/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CK.Abstractions\CK.Abstractions.csproj" />
+    <ProjectReference Include="..\CK.Engine.Configuration\CK.Engine.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
