--- a/CK.Engine.Configuration/CK.Engine.Configuration.csproj
+++ b/CK.Engine.Configuration/CK.Engine.Configuration.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.Core" Version="19.0.1--0007-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="20.0.1--0011-develop" />
   </ItemGroup>
 
   <ItemGroup>
