--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -13,6 +13,10 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
     <None Remove="Poco\Json\**" />
   </ItemGroup>
   <ItemGroup>
+    <!-- Temporary adaptation until CK.Engine fully replaces this package. -->
+    
+    <ProjectReference Include="..\CK.Engine.TypeCollector\CK.Engine.TypeCollector.csproj" />
+    
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
     <PackageReference Include="CK.CodeGen.Roslyn" Version="9.0.1--0013-develop" />
     <PackageReference Include="CK.Core" Version="19.0.1--0007-develop" />
