Refactoring and cleanup.
Will try the SharedEngine helper on the LibWithSampleModel
that currently uses CKSetup.

--- a/CK.Engine/CK.Engine.csproj
+++ b/CK.Engine/CK.Engine.csproj
@@ -12,7 +12,7 @@
 
   <!-- Hopefully temporary... -->
   <ItemGroup>
-    <ProjectReference Include="..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
+    <ProjectReference Include="..\CK.StObj.Engine\CK.StObj.Engine.csproj" />
   </ItemGroup>
 
 </Project>
