--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,10 +13,10 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="9.0.1--0020-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.6.1--0028-develop" />
-    <PackageReference Include="CK.Reflection" Version="9.0.3--0046-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="17.0.1--0023-develop" />
+    <PackageReference Include="CK.CodeGen" Version="10.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.7.0" />
+    <PackageReference Include="CK.Reflection" Version="9.0.2" />
+    <PackageReference Include="CK.Setup.Dependency" Version="18.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
