Releasing 26.0.1. Upgrading release dependencies: NuGet:CK.Testing.Monitoring/10.0.0, NuGet:CK.Monitoring/21.0.0, NuGet:CK.ActivityMonitor.SimpleSender/21.0.0, NuGet:CK.ActivityMonitor.SimpleSender/21.0.0, NuGet:CK.Globalization/0.7.0, NuGet:CK.Testing.Monitoring/10.0.0, NuGet:CK.Testing.CKSetup/22.0.1, NuGet:CK.Testing.Monitoring/10.0.0, NuGet:CK.CodeGen.Roslyn/10.0.0, NuGet:CK.Core/20.0.0, NuGet:CK.CodeGen/10.0.0, NuGet:CK.Globalization/0.7.0, NuGet:CK.Reflection/9.0.2, NuGet:CK.Setup.Dependency/18.0.0, NuGet:CK.ActivityMonitor.SimpleSender/21.0.0.

--- a/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
+++ b/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="10.0.1--0002-develop" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="10.0.0" />
     <!-- This implements concrete ServiceCollection and DI engine itself. -->
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
