--- a/CK.Engine.Configuration/CK.Engine.Configuration.csproj
+++ b/CK.Engine.Configuration/CK.Engine.Configuration.csproj
@@ -4,7 +4,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="21.0.1--0002-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="21.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Abstractions\CK.Abstractions.csproj" />
