CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04ytpiu-develop
NuGet:CK.Monitoring/0.0.0--04ytpis-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04ytpis-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04ytpis-develop
NuGet:CK.Globalization/0.0.0--04ytpix-develop
NuGet:CK.Testing.Monitoring/0.0.0--04ytpiu-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04ytpiv-develop
NuGet:CK.Core/0.0.0--04ytou1-develop
NuGet:CK.CodeGen/0.0.0--04ytpiv-develop
NuGet:CK.Globalization/0.0.0--04ytpix-develop
NuGet:CK.Setup.Dependency/0.0.0--04ytpiv-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04ytpis-develop.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="21.0.0" />
+    <PackageReference Include="CK.Monitoring" Version="0.0.0--04ytpis-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
