--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -15,8 +15,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
     <!-- Temporary adaptation until CK.Engine fully replaces this package. -->
     <ProjectReference Include="..\CK.Engine.TypeCollector\CK.Engine.TypeCollector.csproj" />
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="10.0.0" />
-    <PackageReference Include="CK.Core" Version="20.0.0" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="0.0.0--04ytpiv-develop" />
+    <PackageReference Include="CK.Core" Version="0.0.0--04ytou1-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
