--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,7 +5,9 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CK.AppIdentity" Version="CK.AppIdentity.0.0.0--04ytqpn-develop" />
     <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04ytqpl-develop" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
