CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04yy55i-develop
NuGet:CK.Monitoring/0.0.0--04yy55g-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04yy55f-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04yy55f-develop
NuGet:CK.Globalization/0.0.0--04yy55m-develop
NuGet:CK.AppIdentity/0.0.0--04yy55l-develop
NuGet:CK.Testing.Monitoring/0.0.0--04yy55i-develop
NuGet:CK.Core/0.0.0--04yy4uu-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04yy55j-develop
NuGet:CK.CodeGen/0.0.0--04yy55j-develop
NuGet:CK.Globalization/0.0.0--04yy55m-develop
NuGet:CK.Setup.Dependency/0.0.0--04yy55k-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04yy55f-develop.

--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -15,8 +15,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
     <!-- Temporary adaptation until CK.Engine fully replaces this package. -->
     <ProjectReference Include="..\CK.Engine.TypeCollector\CK.Engine.TypeCollector.csproj" />
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="0.0.0--04yy0lz-develop" />
-    <PackageReference Include="CK.Core" Version="0.0.0--04ytqlb-develop" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="0.0.0--04yy55j-develop" />
+    <PackageReference Include="CK.Core" Version="0.0.0--04yy4uu-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
