CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04z7c02-develop
NuGet:CK.Monitoring/0.0.0--04z7c00-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.Globalization/0.0.0--04z7c06-develop
NuGet:CK.AppIdentity/0.0.0--04z7c05-develop
NuGet:CK.Testing.Monitoring/0.0.0--04z7c02-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04z7c03-develop
NuGet:CK.Core/0.0.0--04yy4uu-develop
NuGet:CK.CodeGen/0.0.0--04z7c03-develop
NuGet:CK.Globalization/0.0.0--04z7c06-develop
NuGet:CK.Setup.Dependency/0.0.0--04z7c04-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="0.0.0--04yy55g-develop" />
+    <PackageReference Include="CK.Monitoring" Version="0.0.0--04z7c00-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
