--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04yy55l-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04yy55i-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04z7c05-develop" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04z7c02-develop" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
