CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04z8lly-develop
NuGet:CK.Monitoring/0.0.0--04z8llm-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.Globalization/0.0.0--04z8lm2-develop
NuGet:CK.AppIdentity/0.0.0--04z8lm2-develop
NuGet:CK.Testing.Monitoring/0.0.0--04z8lly-develop
NuGet:CK.Core/0.0.0--04yy4uu-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04z8llz-develop
NuGet:CK.CodeGen/0.0.0--04z8llz-develop
NuGet:CK.Globalization/0.0.0--04z8lm2-develop
NuGet:CK.Setup.Dependency/0.0.0--04z8lm0-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--04z7c03-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04z7c06-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--04z7c04-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--04z8llz-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04z8lm2-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--04z8lm0-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
