CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04z92fk-develop
NuGet:CK.Monitoring/0.0.0--04z92bw-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.Globalization/0.0.0--04z92fo-develop
NuGet:CK.AppIdentity/0.0.0--04z92fo-develop
NuGet:CK.Testing.Monitoring/0.0.0--04z92fk-develop
NuGet:CK.Core/0.0.0--04yy4uu-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04z92fl-develop
NuGet:CK.CodeGen/0.0.0--04z92fl-develop
NuGet:CK.Globalization/0.0.0--04z92fo-develop
NuGet:CK.Setup.Dependency/0.0.0--04z92fm-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop.

--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04z8lm2-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04z8lly-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04z92fo-develop" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04z92fk-develop" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
