--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="0.0.0--04z8llm-develop" />
+    <PackageReference Include="CK.Monitoring" Version="0.0.0--04z92bw-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
