CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.0.0--04zc9l5-develop
NuGet:CK.Monitoring/0.0.0--04zc9hd-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04z7bt0-develop
NuGet:CK.Globalization/0.0.0--04zc9l9-develop
NuGet:CK.AppIdentity/0.0.0--04zca6l-develop
NuGet:CK.Testing.Monitoring/0.0.0--04zc9l5-develop
NuGet:CK.Core/0.0.0--04yy4uu-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04zc9l5-develop
NuGet:CK.CodeGen/0.0.0--04zc9l5-develop
NuGet:CK.Globalization/0.0.0--04zc9l9-develop
NuGet:CK.Setup.Dependency/0.0.0--04zc9l6-develop.

--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,7 +5,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zc9l8-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zca6l-develop" />
     <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--04zc9l5-develop" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
