CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Monitoring/0.0.0--04zdxpw-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04zdxpv-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04zdxpv-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Globalization/0.0.0--04zdxq0-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.AppIdentity/0.0.0--04zdxq0-develop
NuGet:CK.Testing.Monitoring/0.0.0--04zdxpx-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Core/0.0.0--04zdv22-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--04zdxpy-develop
NuGet:CK.CodeGen/0.0.0--04zdxpy-develop
NuGet:CK.Globalization/0.0.0--04zdxq0-develop
NuGet:CK.Setup.Dependency/0.0.0--04zdxpy-develop.

--- a/Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LibWithSampleModel.Tests.csproj
+++ b/Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LibWithSampleModel.Tests.csproj
@@ -3,14 +3,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
     <ProjectReference Include="..\..\..\StObjEngineTesting\Sample.Engine\Sample.Engine.csproj" />
     <ProjectReference Include="..\..\LibWithSampleModel\LibWithSampleModel.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zcmka-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zdxpx-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
-
 </Project>
