CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Monitoring/0.0.0--052zkuh-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--052zkuh-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--052zkuh-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Globalization/0.0.0--052zkul-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.AppIdentity/0.0.0--052zkuk-develop
NuGet:CK.Testing.Monitoring/0.0.0--052zkui-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--052zkuj-develop
NuGet:CK.Core/0.0.0--051ie60-develop
NuGet:CK.CodeGen/0.0.0--052zkuj-develop
NuGet:CK.Globalization/0.0.0--052zkul-develop
NuGet:CK.Setup.Dependency/0.0.0--052zkuj-develop.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="0.0.0--04zrd94-develop" />
+    <PackageReference Include="CK.Monitoring" Version="0.0.0--052zkuh-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
