--- a/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
+++ b/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
     <ProjectReference Include="..\..\Sample.Engine\Sample.Engine.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zrd95-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--052zkui-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
