CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.Monitoring/0.0.0--053bu1v-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053bu1v-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053bu1v-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.Globalization/0.0.0--053bu20-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.AppIdentity/0.0.0--053bu1z-develop
NuGet:CK.Testing.Monitoring/0.0.0--053bu1w-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--053bu1x-develop
NuGet:CK.Core/0.0.0--053btwf-develop
NuGet:CK.CodeGen/0.0.0--053bu1x-develop
NuGet:CK.Globalization/0.0.0--053bu20-develop
NuGet:CK.Setup.Dependency/0.0.0--053bu1y-develop.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--052zkuj-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--052zkul-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--052zkuj-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053bu1x-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053bu20-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053bu1y-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
