CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.Monitoring/0.0.0--053ij1l-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053i1z6-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053i1z6-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.Globalization/0.0.0--053ij2g-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.AppIdentity/0.0.0--053ij2f-develop
NuGet:CK.Testing.Monitoring/0.0.0--053ij2b-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--053ij2c-develop
NuGet:CK.Core/0.0.0--053i1rr-develop
NuGet:CK.CodeGen/0.0.0--053ij2c-develop
NuGet:CK.Globalization/0.0.0--053ij2g-develop
NuGet:CK.Setup.Dependency/0.0.0--053ij2d-develop.

--- a/CK.Poco.Exchange/CK.Poco.Exchange.csproj
+++ b/CK.Poco.Exchange/CK.Poco.Exchange.csproj
@@ -6,7 +6,7 @@
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--053i1zd-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053ij2g-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
