--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--053i1z9-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--053i1zd-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053i1za-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053ij2c-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053ij2g-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053ij2d-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
