CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Monitoring/0.0.0--053ij1l-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053i1z6-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053i1z6-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Globalization/0.0.0--053iji0-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.AppIdentity/0.0.0--053iji0-develop
NuGet:CK.Testing.Monitoring/0.0.0--053ijhr-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Core/0.0.0--053i1rr-develop
NuGet:CK.CodeGen.Roslyn/0.0.0--053ijhz-develop
NuGet:CK.CodeGen/0.0.0--053ijhz-develop
NuGet:CK.Globalization/0.0.0--053iji0-develop
NuGet:CK.Setup.Dependency/0.0.0--053ijhz-develop.

--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--053ij2c-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--053ij2g-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053ij2d-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053ijhz-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053iji0-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053ijhz-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
