--- a/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
+++ b/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../../CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ij2b-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ijhr-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
